--- a/wordpress/Vagrantfile
+++ b/wordpress/Vagrantfile
@@ -3,6 +3,7 @@
 
 @updateOS = <<SCRIPT
 sudo apt-get update
+sudo apt-get upgrade -y
 SCRIPT
 
 @docker = <<SCRIPT
@@ -16,9 +17,10 @@ sudo docker pull wordpress
 SCRIPT
 
 @cleanup = <<SCRIPT
+sudo apt-get clean
+cat /dev/null > ~/.bash_history && history -c
 sudo dd if=/dev/zero of=/EMPTY bs=1M
-sudo rm -rf /EMPTY
-cat /dev/null > ~/.bash_history && history -c && exit
+sudo rm -rf /EMPTY && exit
 SCRIPT
 
 Vagrant.configure(2) do |config|
