--- a/wordpress/Vagrantfile
+++ b/wordpress/Vagrantfile
@@ -26,7 +26,8 @@ SCRIPT
 Vagrant.configure(2) do |config|
 
   config.vm.box = "ubuntu/trusty64"
-
+  
+  config.vm.network "forwarded_port", guest: 22, host: 2222, id: "ssh"
   config.vm.network "forwarded_port", guest: 80, host: 8080, auto_correct: true
 
   config.vm.network "private_network", ip: "192.168.33.10"
