--- a/wordpress/project/mydbdump/devtools/Dockerfile
+++ b/wordpress/project/mydbdump/devtools/Dockerfile
@@ -2,4 +2,7 @@ FROM php:5.6-apache
 
 MAINTAINER Li Li
 
-RUN curl https://github.com/pantheon-systems/cli/releases/download/0.10.0/terminus.phar -L -o /usr/local/bin/terminus && chmod +x /usr/local/bin/terminus
+RUN apt-get update && \
+        apt-get install -y vim && \
+        curl https://github.com/pantheon-systems/cli/releases/download/0.10.0/terminus.phar -L -o /usr/local/bin/terminus && \
+        chmod +x /usr/local/bin/terminus
