--- a/wordpress/project/Vagrantfile
+++ b/wordpress/project/Vagrantfile
@@ -1,6 +1,12 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+@pkgs = <<SCRIPT
+sudo apt-get -y install php5
+sudo curl https://github.com/pantheon-systems/terminus/releases/download/0.11.1/terminus.phar -L -o /usr/local/bin/terminus && chmod +x /usr/local/bin/terminus
+terminus auth login --machine-token=BevwQDtvqmVZsdcm6UupCSuV42u4AlzmDQRS4KMqhIe2X
+SCRIPT
+
 @mysql = <<SCRIPT
 mkdir -p /mydbdata
 docker run --name wordpressdb -v=/vagrant/mydbdump:/tmp/mydbdump -v=/mydbdata:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=wordpress -d mysql:5.7.9
@@ -40,7 +46,8 @@ Vagrant.configure(2) do |config|
    vb.memory = "2048"
    vb.cpus = 2
   end
-
+  
+ config.vm.provision "shell", inline: @pkgs
  config.vm.provision "shell", inline: @mysql
  config.vm.provision "shell", inline: @importmysql
  config.vm.provision "shell", inline: @wordpress
