--- a/wordpress/project/Vagrantfile
+++ b/wordpress/project/Vagrantfile
@@ -4,7 +4,7 @@
 @pkgs = <<SCRIPT
 sudo apt-get -y install php5
 sudo curl https://github.com/pantheon-systems/terminus/releases/download/0.11.1/terminus.phar -L -o /usr/local/bin/terminus && chmod +x /usr/local/bin/terminus
-terminus auth login --machine-token=BevwQDtvqmVZsdcm6UupCSuV42u4AlzmDQRS4KMqhIe2X
+terminus auth login --machine-token=<your_machine_token>
 SCRIPT
 
 @mysql = <<SCRIPT
